--- a/default.html
+++ b/default.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>WEB APP DEMO</h1>
-<p>Web App Creation</p>
+<h1>WEB APP DEMO - TEST</h1>
+<p>Test Slot Demo</p>
 
 </body>
 </html>
