--- a/default.html
+++ b/default.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>WEB APP DEMO - TEST</h1>
-<p>Test Slot Demo</p>
+<h1>Web App US Region</h1>
+<p> Server in US region </p>
 
 </body>
 </html>
